# logosagent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.sh  flake.nix  metadata.json  module.json
.github/workflows/: ci.yml  clean-lgx.yml
agent_lez/: Cargo.toml
agent_lez/src/: main.rs
cli/: logos-agent-cli
docs/: a2a-logos-messaging-binding.md  architecture.md  basecamp-owner-chat-evidence-20260622.md  basecamp-v012-agent-evidence-20260622.md  cu-report.md  demo-video-links.md  deployment-guide.md  environment-setup.md  final-demo-recording-guide.md  implementation-status.md  localnet-a2a-discovery-payment-evidence-20260620.md  localnet-prize-evidence-refresh-20260622.md  manual-intervention-checklist.md  owner-channel-basecamp.md  prize-submission-dossier.md  security-model.md  skill-interface.md  submission-readiness.md  testnet-a2a-payment-evidence-20260619.md  testnet-compatibility-evidence-20260619.md  testnet-evidence-runbook.md  testnet-program-evidence-20260619.md  testnet-redeploy-note-20260625.md  testnet-v020-compatibility-evidence-20260625.md  testnet-v020-final-evidence-20260701.md  testnet-v020-live-evidence-20260626.md  testnet-wallet-transfer-evidence-20260619.md  three-agent-headless-evidence-20260620.md
examples/: a2a-task.json  program-call-facade.json  program-call-wallet-args.json  storage-upload.json  wallet-send.json
nix/logos-blockchain-circuits-compat/: flake.nix
patches/: logos-execution-zone-ffi-build.patch  logos-execution-zone-module-pinned-localnet-ffi.patch  logos-execution-zone-module-wallet-ffi.patch
scripts/: agent-a2a-paid-smoke.sh  agent-a2a-smoke.sh  agent-core-smoke.sh  agent-messaging-smoke.sh  agent-program-smoke.sh  agent-storage-smoke.sh  agent-wallet-smoke.sh  basecamp-owner-channel.sh  basecamp-profile-install-smoke.sh  bootstrap-workspace.sh  build-pinned-lez-runtime.sh  check-runtime-modules.sh  collect-prize-evidence.py  create-submission-bundle.py  delivery-smoke.sh  demo-local.sh  lez-testnet-a2a-payment-evidence.sh  lez-testnet-compatibility-evidence.sh  lez-v020-endpoint-diagnose.py  localnet-integration.sh  package-dev-lgx.sh  package-live-modules-lgx.sh  preflight-submission.sh  prepare-three-agent-deployment.sh  repair-live-modules.sh  stable-test-runner.sh  start-owner-chat-agent.sh  summarize-three-agent-deployment.py
src/: a2a_adapter.cpp  a2a_adapter.h  agent_runtime.cpp  agent_runtime.h  agent_state.cpp  agent_state.h  amount_utils.cpp  amount_utils.h  crypto_utils.cpp  crypto_utils.h  json_utils.cpp  json_utils.h  logos_agent_interface.h  logos_agent_plugin.cpp  logos_agent_plugin.h  messaging_adapter.cpp  messaging_adapter.h  owner_message_utils.cpp  owner_message_utils.h  policy_engine.cpp  policy_engine.h  program_adapter.cpp  program_adapter.h  skill_registry.cpp  skill_registry.h  storage_adapter.cpp  storage_adapter.h  wallet_adapter.cpp  wallet_adapter.h
support/basecamp-crash-report-20260620/: README.md  module-sizes.txt  scaffold.toml
support/basecamp-crash-report-20260620/test-run/: preflight.txt
support/basecamp-v012-agent-proof-20260622/: README.md  basecamp-log-extract.txt  inspector-summary.jsonl
tests/: CMakeLists.txt  test_amount_policy.cpp  test_crypto_utils.cpp  test_owner_message_utils.cpp  test_skill_contract.cpp  test_state_skills.cpp
